--- a/src/pages/template-library/TemplateStyle.scss
+++ b/src/pages/template-library/TemplateStyle.scss
@@ -1,4 +1,8 @@
 .template-library-container {
+
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     & .template-library-header {
         display: flex;
         align-items: center;
@@ -20,25 +24,34 @@
     }
 
     & .directory-tree__container {
-        flex-grow: 1;
+        width: 34rem;
         overflow: auto;
         border-right: '1px solid #DCDCDC';
         max-height: calc(var(--app-content-height) - 5rem);
         color: var(--text-primary);
-
+        height: 100%;
+       
         ul.MuiSimpleTreeView-root {
             padding: var(space-lg) var(space-xl);
+            scrollbar-width: none;
         }
+    }
+    & .template-library__table {
+        flex: 1;
+        height: 100%;
     }
 
 }
 
 .template-library-table-container {
     overflow-y: auto;
+    height: 100%;
 
     .MuiPaper-root {
         box-shadow: none;
         border-radius: 0px;
+        height: 100%;
+        
     }
 
     .MuiTableCell-root {
