--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -3,4 +3,5 @@
     --app-content-height: calc(100vh - var(--app-bar-height));
     --pagetemplate-bottom-margin: var(--space-2xl);
     --pagetemplate-content-height: calc(var(--pagetemplate-bottom-margin) - var(--app-content-height));
+    --sidebar-width: 9.2rem;
 }
